2018-07-25  Aakash Jain  <aakash_jain@apple.com>

        [ews-build] Add build step ArchiveBuiltProduct
        https://bugs.webkit.org/show_bug.cgi?id=188014

        Reviewed by Lucas Forschler.

        * BuildSlaveSupport/ews-build/steps.py:
        (ArchiveBuiltProduct): Added build step ArchiveBuiltProduct.
        * BuildSlaveSupport/ews-build/steps_unittest.py: Added unit-tests.

2018-07-25  Chris Dumez  <cdumez@apple.com>

        navigator.userAgent may return outdated value after webView.customUserAgent is set
        https://bugs.webkit.org/show_bug.cgi?id=188009
        <rdar://problem/42566456>

        Reviewed by Alex Christensen.

        Add API test coverage.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKitCocoa/CustomUserAgent.mm: Added.
        (TEST):

2018-07-25  Charlie Turner  <cturner@igalia.com>

        [Flatpak] Pass more environment variables to sandbox
        https://bugs.webkit.org/show_bug.cgi?id=188002

        Reviewed by Michael Catanzaro.

        * flatpak/flatpakutils.py:
        (WebkitFlatpak.run_in_sandbox):

2018-07-25  Zan Dobersek  <zdobersek@igalia.com>

        [WPE] Switch ViewBackend to using wpe_view_backend_exportable_fdo_egl APIs
        https://bugs.webkit.org/show_bug.cgi?id=187997

        Reviewed by Carlos Garcia Campos.

        Instead of the raw wpe_view_backend_exportable_fdo API, switch to using
        the EGL-oriented API that simply serves EGLImageKHR objects instead of
        raw buffer resources. This allows us not to wrangle with creating and
        managing lifetime of the same EGLImageKHR by ourselves.

        ViewBackend now defines a wpe_view_backend_exportable_fdo_egl_client
        struct and uses wpe_view_backend_exportable_fdo_egl_create() to create
        the exportable object. This means that for each frame we're served an
        EGLImageKHR object that is passed on to the displayBuffer()
        implementation.
